Fully working build until grade 2.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Software quality and testing - Selenium assignment.xlsx 
 .gradle
 build
+backups
+~$Software quality and testing - Selenium assignment.xlsx
